Generates html and configuration for pdf
